# zungenrede-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  practice_sentences.json
src/: ai.rs  commands_messages.rs  consts.rs  input.rs  main.rs  picture.rs  practice.rs  promts_consts.rs  story.rs  talk.rs  translation.rs
