[package]
name = "zungenrede-bot"
version = "0.1.0"
edition = "2021"


[dependencies]
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.83"
chrono = "0.4.38"
reqwest = { version = "0.12.9", features = ["json"] }
rand = "0.8.5"
